# framework.api.message-port

./: CMakeLists.txt  capi-message-port.pc.in
TC/: config  makespec.sh
TC/testcase/: tslist  utc_message_port.c
include/: message_port.h
packaging/: capi-message-port.spec
src/: CMakeLists.txt  message_port.c
