CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

## OUTPUT PATHS
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/cmake_build_tmp/output)

## LIBRARY PATH
LINK_DIRECTORIES (${LIBRARY_OUTPUT_PATH})

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

ADD_SUBDIRECTORY(src)
